[package]
name = "voyager"
version = "0.1.0"
authors = ["Joey <joey.xf@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1"
httparse = "1.0"
futures = "0.1.20"
bytes = "0.4"
tokio = "0.1"
chrono = "0.4"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
postgres = "0.15"
